manifests/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatos
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
