manifests/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://bjdazuretech.vault.azure.net/secrets/production-certificate
  name: whatos-ingress
  namespace: whatos
spec:
  rules:
  - host: api.bjdazure.tech
  tls:
  - hosts:
    - api.bjdazure.tech
